--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -33,9 +33,9 @@
 
   <p>1.2 Individuals or organizations (hereinafter referred to as "You" or "Users") must carefully read and fully understand this Privacy Policy before using our services. By using the App, you agree to this Policy and our Terms of Service. If you do not agree, please stop using the App immediately.</p>
 
-  <p>1.3 For questions regarding this Privacy Policy, please contact us at <strong>phonetrackerapp@outlook.com</strong>.</p>
+  <p>1.3 For questions regarding this Privacy Policy, please contact us at <strong>phonetracker.feedback@outlook.com</strong>.</p>
 
-  <p>1.4 The App and services are not designed for use by children under 13 years of age (or the minimum legal age in your jurisdiction). If we learn that we have collected personal information from children without verified parental consent, we will delete such information immediately.</p>
+  <p>1.4 Our Services are not available for use by persons under the age of 13 (or the minimum legal age in your country to use our Services, hereinafter referred to as &quot;Children&quot;). Children may not be allowed to receive any services from Ora Drama unless the services are ordered by the Children&#39;s guardian personally. In this case, the guardian is responsible for the Children&#39;s activity on the Services.</p>
 </ul>
 
 <h3>2. Information We Collect</h3>
@@ -101,9 +101,9 @@
 
 <h3>8. Subscription and Payment</h3>
 <ul>
-  <p>8.1 The App may offer optional premium services or subscriptions through Google Play or Apple App Store. Payments are processed securely via their respective systems.</p>
+  <p>8.1 The App may offer optional premium services or subscriptions through Apple App Store. Payments are processed securely via their respective systems.</p>
 
-  <p>8.2 Subscription renewal and cancellation terms follow Google Play or App Store policies. Please refer to their respective Refund Policy for details.</p>
+  <p>8.2 Subscription renewal and cancellation terms follow App Store policies. Please refer to their respective Refund Policy for details.</p>
 </ul>
 
 <h3>9. Limitation of Liability</h3>
@@ -118,13 +118,6 @@
   <p>10.1 We may update this Privacy Policy from time to time. The latest version will always be available within the App or on our website.</p>
 
   <p>10.2 Continued use of the App after changes are posted means you accept the updated Policy.</p>
-</ul>
-
-<h3>11. Contact Us</h3>
-<ul>
-  <p>If you have questions, concerns, or requests related to this Privacy Policy, please contact us at:</p>
-  <p><strong>Email:</strong> phonetrackerapp@outlook.com</p>
-  <p><strong>Address:</strong> 123 Privacy Street, Tokyo, Japan</p>
 </ul>
 
 </body>
