--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -35,7 +35,7 @@
 
   <p>1.3 For questions regarding this Privacy Policy, please contact us at <strong>phonetracker.feedback@outlook.com</strong>.</p>
 
-  <p>1.4 Our Services are not available for use by persons under the age of 13 (or the minimum legal age in your country to use our Services, hereinafter referred to as &quot;Children&quot;). Children may not be allowed to receive any services from Ora Drama unless the services are ordered by the Children&#39;s guardian personally. In this case, the guardian is responsible for the Children&#39;s activity on the Services.</p>
+  <p>1.4 Our Services are not available for use by persons under the age of 13 (or the minimum legal age in your country to use our Services, hereinafter referred to as &quot;Children&quot;). Children may not be allowed to receive any services from Phone Tracker unless the services are ordered by the Children&#39;s guardian personally. In this case, the guardian is responsible for the Children&#39;s activity on the Services.</p>
 </ul>
 
 <h3>2. Information We Collect</h3>
