--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -89,7 +89,7 @@
   <p>&nbsp;&nbsp;(iii) Withdraw consent to data processing at any time;</p>
   <p>&nbsp;&nbsp;(iv) Disable location tracking or delete your account through the app settings.</p>
 
-  <p>6.2 To exercise these rights, please contact us at <strong>phonetrackerapp@outlook.com</strong>.</p>
+  <p>6.2 To exercise these rights, please contact us at <strong>phonetracker.feedback@outlook.com</strong>.</p>
 </ul>
 
 <h3>7. Third-Party Services</h3>
