--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -101,9 +101,9 @@
 
 <h3>8. Subscription and Payment</h3>
 <ul>
-  <p>8.1 The App may offer optional premium services or subscriptions through Apple App Store. Payments are processed securely via their respective systems.</p>
+  <p>8.1 The App may offer optional premium services or subscriptions through Apple App Store. Payments are processed securely via the respective systems.</p>
 
-  <p>8.2 Subscription renewal and cancellation terms follow App Store policies. Please refer to their respective Refund Policy for details.</p>
+  <p>8.2 Subscription renewal and cancellation terms follow App Store policies. Please refer to the respective Refund Policy for details.</p>
 </ul>
 
 <h3>9. Limitation of Liability</h3>
