--- a/termsofservices.html
+++ b/termsofservices.html
@@ -35,7 +35,7 @@
     <h1>Phone Tracker Terms of Service</h1>
 
     <p>
-      Last Updated: April 7th, 2025
+      Last Updated: October 21th, 2025
     </p>
 
     <h3>1. Agreement to Terms</h3>
@@ -88,7 +88,7 @@
       Some features may be available only through paid subscriptions (“Premium Services”). Subscription terms, pricing, and renewal periods will be displayed within the App or your App Store account.
     </p>
     <ul>
-      <li>Payments are processed securely via the Apple App Store or Google Play.</li>
+      <li>Payments are processed securely via the Apple App Store.</li>
       <li>Subscriptions automatically renew unless canceled before the renewal date.</li>
       <li>All payments are final and non-refundable unless required by applicable law.</li>
       <li>You may cancel your subscription at any time through your App Store account settings.</li>
@@ -132,32 +132,21 @@
       To the maximum extent permitted by law, Phone Tracker and its affiliates shall not be liable for any indirect, incidental, or consequential damages arising from your use of the Services. In no event shall our total liability exceed the amount you paid, if any, for the Services during the 12 months preceding the claim.
     </p>
 
-    <h3>14. Indemnification</h3>
-    <p>
-      You agree to indemnify, defend, and hold harmless Phone Tracker, its affiliates, employees, and partners from any claims, losses, liabilities, damages, or expenses (including legal fees) arising from your misuse of the App or violation of these Terms.
-    </p>
-
-    <h3>15. Third-Party Services</h3>
+    <h3>14. Third-Party Services</h3>
     <p>
       The App may include links or integrations with third-party services such as Google Maps, Firebase, or Apple APIs. Your use of those services is governed by their respective terms and privacy policies.
     </p>
 
-    <h3>16. Governing Law and Dispute Resolution</h3>
-    <p>
-      These Terms shall be governed by and construed in accordance with the laws of Japan, without regard to its conflict of law principles. Any disputes shall be resolved through amicable negotiation; if unresolved, they shall be submitted to the competent courts in Tokyo, Japan.
-    </p>
-
-    <h3>17. Changes to Terms</h3>
+    <h3>15. Changes to Terms</h3>
     <p>
       We may revise these Terms from time to time. The latest version will always be available within the App or on our website. Continued use of the App after such updates constitutes acceptance of the revised Terms.
     </p>
 
-    <h3>18. Contact Us</h3>
+    <h3>16. Contact Us</h3>
     <p>
       If you have any questions about these Terms or the App, please contact us at:
     </p>
-    <p><strong>Email:</strong> phonetrackerapp@outlook.com</p>
-    <p><strong>Address:</strong> 123 Privacy Street, Tokyo, Japan</p>
+    <p><strong>Email:</strong> phonetracker.feedback@outlook.com</p>
 
   </body>
 </html>
