--- a/termsofservices.html
+++ b/termsofservices.html
@@ -46,7 +46,7 @@
 
     <h3>2. Privacy Policy</h3>
     <p>
-      Your use of the Services is also governed by our <a href="privacy.html">Privacy Policy</a>, which explains how we collect, use, and protect your personal information, including location data.
+      Your use of the Services is also governed by our <a href="privacypolicy.html">Privacy Policy</a>, which explains how we collect, use, and protect your personal information, including location data.
     </p>
 
     <h3>3. Eligibility</h3>
