--- a/index.html
+++ b/index.html
@@ -205,9 +205,12 @@
 
   <section class="carousel">
     <button class="prev">❮</button>
-    <img src="1.png" class="active" alt="截图1">
-    <img src="2.png" alt="截图2">
-    <img src="3.png" alt="截图3">
+    <img src="en-1.jpg" class="active" alt="截图1">
+    <img src="en-2.jpg" alt="截图2">
+    <img src="en-3.jpg" alt="截图3">
+    <img src="en-4.jpg" alt="截图4">
+    <img src="en-5.jpg" alt="截图5">
+    <img src="en-6.jpg" alt="截图6">
     <button class="next">❯</button>
   </section>
 
@@ -281,3 +284,4 @@
   </script>
 </body>
 </html>
+
