--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <footer>
     <div class="contact">
         <h3>📩 联系我们</h3>
-        <p>如有问题或建议，请发送邮件至：<a href="mailto:phonetracker.feedback@outlook.com">pdfreader.feedback@outlook.com</a></p>
+        <p>如有问题或建议，请发送邮件至：<a href="mailto:phonetracker.feedback@outlook.com">phonetracker.feedback@outlook.com</a></p>
     </div>
     <br>
     <p>© 2025 Phone Tracker 版权所有</p>
@@ -289,5 +289,6 @@
   </script>
 </body>
 </html>
+
 
 
