--- a/index.html
+++ b/index.html
@@ -282,8 +282,12 @@
   <footer>
     <div class="contact">
         <h3 data-zh="📩 联系我们" data-en="📩 Contact Us">📩 联系我们</h3>
-        <p data-zh="如有问题或建议，请发送邮件至：" data-en="For inquiries or feedback, email us at:">
-          如有问题或建议，请发送邮件至：<a href="mailto:phonetracker.feedback@outlook.com">phonetracker.feedback@outlook.com</a></p>
+        <p>
+          <span data-zh="如有问题或建议，请发送邮件至：" data-en="For inquiries or feedback, email us at:">
+            如有问题或建议，请发送邮件至：
+          </span>
+          <a href="mailto:phonetracker.feedback@outlook.com">phonetracker.feedback@outlook.com</a>
+        </p>
     </div>
     <br>
     <p>© 2025 Phone Tracker 版权所有</p>
@@ -328,4 +332,5 @@
   </script>
 </body>
 </html>
+
 
